# Polynomials

./: .gitignore  CMakeLists.txt  Polynomial.cpp  Polynomial.h  Polynomial.hpp  tests.cpp
tests/: catch.hpp  catchmain.cpp  polynomial.cpp
